Fixed issue that icon isn't visible on light tg theme

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -66,6 +66,10 @@
     margin: var(--step);
 }
 
+.logo_text {
+    color: var(--text-color);
+}
+
 .header_triangle_logo {
     width: calc(4 * var(--step));
 }
